2007-08-08 Xavier Claessens  <xclaesse@gmail.com>

	* autogen.sh: Requier automake 1.9. Fixes bug #464822 (Cosimo Cecchi).

2007-08-08 Xavier Claessens  <xclaesse@gmail.com>

	* MAINTAINERS: Updated the MAINTAINERS file to match new syntax.

2007-08-07  Marco Barisione  <marco@barisione.org>

	* libempathy/Makefile.am:
	* libempathy/empathy-marshal-main.c: Remove empathy-marshal-main.c and
	include empathy-marshal.h from empathy-marshal.c.

	* libempathy/Makefile.am:
	* libempathy-gtk/Makefile.am: Generate files for enum types with
	glib-mkenums.

	* libempathy/empathy-contact.c:
	* libempathy/empathy-idle.c:
	* libempathy/empathy-message.c:
	* libempathy/empathy-presence.c:
	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/empathy-preferences.c:
	* doc/libempathy-gtk/libempathy-gtk.types:
	* doc/libempathy-gtk/tmpl/empathy-contact-list-store.sgml: Use
	g_param_spec_enum() and g_param_spec_flags() instead of
	g_param_spec_(u)int.
	Fixes bug #462465.

	* libempathy-gtk/empathy-contact-list-store.c:
	* libempathy-gtk/empathy-contact-list-store.h: Remove
	empathy_contact_list_store_sort_get_type() as it's now auto-generated
	by glib-mkenums.

2007-08-06 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-main-window.glade: Change main window's title
	to "Contact list".

2007-08-06 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-chat.c: Don't forget to reverse the glist of
	pending messages.

	* libempathy/empathy-tp-roomlist.c: Fix wrong room list names when
	listing them.

2007-08-06 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-account-widget-msn.glade:
	* libempathy-gtk/empathy-account-widget-msn.c: Add an Advanced section
	and remove size_group. 
	Fixes bug #463759 (Jaap A. Haitsma, Xavier Claessens).

	* README: Use ./autogen.sh instead of gnome-autogen.sh.

2007-08-02 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.glade: